# soccer-league-manager-api/routes/players.js
@@ -10,7 +10,7 @@ const router = express.Router();
 const { ObjectId } = require('mongodb');
 const connectDB = require('../data/database');
 const { validatePlayer } = require('../middleware/validate');
-const authenticateToken = require('../middleware/auth');
+const ensureAuthenticated = require('../middleware/ensureAuth');
 
 // GET all players
 router.get('/', async (req, res) => {
@@ -39,7 +39,7 @@ router.get('/:id', async (req, res) => {
 });
 
 // POST create player
-router.post('/', authenticateToken, validatePlayer, async (req, res) => {
+router.post('/', ensureAuthenticated, validatePlayer, async (req, res) => {
   /* #swagger.security = [{ "bearerAuth": [] }]
      #swagger.parameters['body'] = {
     in: 'body',
@@ -58,7 +58,7 @@ router.post('/', authenticateToken, validatePlayer, async (req, res) => {
 });
 
 // PUT update player
-router.put('/:id', authenticateToken, validatePlayer, async (req, res) => {
+router.put('/:id', ensureAuthenticated, validatePlayer, async (req, res) => {
   /* #swagger.security = [{ "bearerAuth": [] }]
      #swagger.parameters['body'] = {
     in: 'body',
@@ -79,7 +79,7 @@ router.put('/:id', authenticateToken, validatePlayer, async (req, res) => {
 });
 
 // DELETE player
-router.delete('/:id', authenticateToken, async (req, res) => {
+router.delete('/:id', ensureAuthenticated, async (req, res) => {
   /* #swagger.security = [{ "bearerAuth": [] }] */
   try {
     const db = await connectDB();
